--- a/lab3-constraintSatisfaction/Sympy_Intro.ipynb
+++ b/lab3-constraintSatisfaction/Sympy_Intro.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,8 @@
       "x0\n",
       "True\n",
       "1\n",
-      "2\n"
+      "2\n",
+      "x1\n"
      ]
     }
    ],
@@ -179,10 +180,14 @@
     "diffDiag = constraint(\"diffDiag\", Ne(abs(1 - 0), abs(_vars[1] - _vars[0])))\n",
     "print(diffDiag.subs({_vars[1]:0, _vars[0]:0}))\n",
     "\n",
-    "a = {1:2,2:4}\n",
-    "for  keys in a:\n",
-    "    print(keys)\n",
-    "\n"
+    "\n",
+    "a = set()\n",
+    "a.add(1)\n",
+    "a.add(2)\n",
+    "for i in a:\n",
+    "    print(i)\n",
+    "x,y = diffDiag.free_symbols\n",
+    "print(x)"
    ]
   },
   {
