--- a/minip2-imdb/IMDB_In_Keras.ipynb
+++ b/minip2-imdb/IMDB_In_Keras.ipynb
@@ -9,12 +9,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -40,13 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25000,)\n",
+      "(25000,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Loading the data (it's preloaded in Keras)\n",
     "(x_train, y_train), (x_test, y_test) = imdb.load_data(num_words=1000)\n",
@@ -67,11 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 14, 22, 16, 43, 530, 973, 2, 2, 65, 458, 2, 66, 2, 4, 173, 36, 256, 5, 25, 100, 43, 838, 112, 50, 670, 2, 9, 35, 480, 284, 5, 150, 4, 172, 112, 167, 2, 336, 385, 39, 4, 172, 2, 2, 17, 546, 38, 13, 447, 4, 192, 50, 16, 6, 147, 2, 19, 14, 22, 4, 2, 2, 469, 4, 22, 71, 87, 12, 16, 43, 530, 38, 76, 15, 13, 2, 4, 22, 17, 515, 17, 12, 16, 626, 18, 2, 5, 62, 386, 12, 8, 316, 8, 106, 5, 4, 2, 2, 16, 480, 66, 2, 33, 4, 130, 12, 16, 38, 619, 5, 25, 124, 51, 36, 135, 48, 25, 2, 33, 6, 22, 12, 215, 28, 77, 52, 5, 14, 407, 16, 82, 2, 8, 4, 107, 117, 2, 15, 256, 4, 2, 7, 2, 5, 723, 36, 71, 43, 530, 476, 26, 400, 317, 46, 7, 4, 2, 2, 13, 104, 88, 4, 381, 15, 297, 98, 32, 2, 56, 26, 141, 6, 194, 2, 18, 4, 226, 22, 21, 134, 476, 26, 480, 5, 144, 30, 2, 18, 51, 36, 28, 224, 92, 25, 104, 4, 226, 65, 16, 38, 2, 88, 12, 16, 283, 5, 16, 2, 113, 103, 32, 15, 16, 2, 19, 178, 32]\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print(x_train[0])\n",
     "print(y_train[0])"
@@ -87,19 +95,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    }
+   ],
    "source": [
     "# One-hot encoding the output into vector mode, each of length 1000\n",
     "tokenizer = Tokenizer(num_words=1000)\n",
     "x_train = tokenizer.sequences_to_matrix(x_train, mode='binary')\n",
     "x_test = tokenizer.sequences_to_matrix(x_test, mode='binary')\n",
-    "print(x_train[0])"
+    "print(len(x_train[2]))"
    ]
   },
   {
@@ -111,20 +123,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25000, 2)\n",
+      "(25000, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "# One-hot encoding the output\n",
     "num_classes = 2\n",
     "y_train = keras.utils.to_categorical(y_train, num_classes)\n",
     "y_test = keras.utils.to_categorical(y_test, num_classes)\n",
+    "\n",
     "print(y_train.shape)\n",
-    "print(y_test.shape)"
+    "print(y_test.shape)\n"
    ]
   },
   {
@@ -137,17 +155,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_20 (Dense)             (None, 128)               128128    \n",
+      "_________________________________________________________________\n",
+      "dropout_13 (Dropout)         (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_21 (Dense)             (None, 2)                 258       \n",
+      "=================================================================\n",
+      "Total params: 128,386\n",
+      "Trainable params: 128,386\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Build the model architecture\n",
+    "# Imports\n",
+    "import numpy as np\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers.core import Dense, Dropout, Activation\n",
+    "from keras.optimizers import SGD\n",
+    "from keras.utils import np_utils\n",
     "\n",
-    "# TODO: Compile the model using a loss function and an optimizer.\n"
+    "# Building the model\n",
+    "model = Sequential()\n",
+    "model.add(Dense(128, activation='relu', input_shape=(1000,)))\n",
+    "model.add(Dropout(.5))\n",
+    "model.add(Dense(2, activation='softmax'))\n",
+    "\n",
+    "# Compiling the model\n",
+    "sgd = SGD(lr=0.01, decay=1e-6, momentum=0.9, nesterov=True)\n",
+    "# model.compile(loss='mean_squared_error', optimizer=sgd)\n",
+    "# TODO: Compile the model using a loss function and an optimizer.\n",
+    "model.compile(loss = 'categorical_crossentropy', optimizer=sgd, metrics=['accuracy'])\n",
+    "model.summary()"
    ]
   },
   {
@@ -160,15 +211,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "0s - loss: 0.6193 - acc: 0.6539\n",
+      "Epoch 2/20\n",
+      "0s - loss: 0.4778 - acc: 0.7741\n",
+      "Epoch 3/20\n",
+      "0s - loss: 0.4203 - acc: 0.8093\n",
+      "Epoch 4/20\n",
+      "0s - loss: 0.3891 - acc: 0.8260\n",
+      "Epoch 5/20\n",
+      "0s - loss: 0.3663 - acc: 0.8403\n",
+      "Epoch 6/20\n",
+      "0s - loss: 0.3546 - acc: 0.8466\n",
+      "Epoch 7/20\n",
+      "0s - loss: 0.3422 - acc: 0.8521\n",
+      "Epoch 8/20\n",
+      "0s - loss: 0.3326 - acc: 0.8577\n",
+      "Epoch 9/20\n",
+      "0s - loss: 0.3223 - acc: 0.8616\n",
+      "Epoch 10/20\n",
+      "0s - loss: 0.3158 - acc: 0.8671\n",
+      "Epoch 11/20\n",
+      "0s - loss: 0.3091 - acc: 0.8690\n",
+      "Epoch 12/20\n",
+      "0s - loss: 0.3002 - acc: 0.8735\n",
+      "Epoch 13/20\n",
+      "0s - loss: 0.2947 - acc: 0.8748\n",
+      "Epoch 14/20\n",
+      "0s - loss: 0.2906 - acc: 0.8795\n",
+      "Epoch 15/20\n",
+      "0s - loss: 0.2830 - acc: 0.8824\n",
+      "Epoch 16/20\n",
+      "0s - loss: 0.2783 - acc: 0.8856\n",
+      "Epoch 17/20\n",
+      "0s - loss: 0.2727 - acc: 0.8867\n",
+      "Epoch 18/20\n",
+      "0s - loss: 0.2728 - acc: 0.8887\n",
+      "Epoch 19/20\n",
+      "0s - loss: 0.2648 - acc: 0.8935\n",
+      "Epoch 20/20\n",
+      "0s - loss: 0.2584 - acc: 0.8948\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fa26941f240>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO: Run the model. Feel free to experiment with different batch sizes and number of epochs."
+    "# TODO: Run the model. Feel free to experiment with different batch sizes and number of epochs.\n",
+    "model.fit(x_train, y_train, epochs=20, batch_size=256, verbose=2)"
    ]
   },
   {
@@ -181,17 +286,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.85976\n"
+     ]
+    }
+   ],
    "source": [
     "score = model.evaluate(x_test, y_test, verbose=0)\n",
     "print(\"Accuracy: \", score[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -210,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
