--- a/p1-dog/dog_app.ipynb
+++ b/p1-dog/dog_app.ipynb
@@ -565,7 +565,7 @@
     "\n",
     "__Answer:__ \n",
     "\n",
-    "I used the hinted architecture above because it was the most succesfull from all the other ones I experimented with. It appears like a good classification architecture because it resembles the most common ones like VGG16. Multiple convolutional layers are stacked together followed by a dense fully connected layer. I tried to replicate one of them but I noticed it would take considerable time to train even for my 1080ti. Also, in the lesson \"28: Transfer Learning in Keras\" I noticed that a globla maxpooling layer"
+    "I used the hinted architecture above because it was the most succesfull from all the other ones I experimented with. It appears like a good classification architecture because it resembles the most common ones like VGG16. Multiple convolutional layers are stacked together followed by a dense fully connected layer. I tried to replicate one of them but I noticed it would take considerable time to train even for my 1080ti. Also, in the lesson \"28: Transfer Learning in Keras\" I noticed that a global maxpooling layer gives better results."
    ]
   },
   {
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -943,11 +943,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "global_average_pooling2d_8 ( (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_8 (Dense)              (None, 133)               68229     \n",
+      "=================================================================\n",
+      "Total params: 68,229\n",
+      "Trainable params: 68,229\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "VGG16_model = Sequential()\n",
     "VGG16_model.add(GlobalAveragePooling2D(input_shape=train_VGG16.shape[1:]))\n",
@@ -965,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -983,11 +999,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 6680 samples, validate on 835 samples\n",
+      "Epoch 1/20\n",
+      "6440/6680 [===========================>..] - ETA: 0s - loss: 12.5880 - acc: 0.1140Epoch 00000: val_loss improved from inf to 11.05677, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 1s - loss: 12.5355 - acc: 0.1157 - val_loss: 11.0568 - val_acc: 0.2120\n",
+      "Epoch 2/20\n",
+      "6440/6680 [===========================>..] - ETA: 0s - loss: 10.6105 - acc: 0.2557Epoch 00001: val_loss improved from 11.05677 to 10.53035, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 10.5846 - acc: 0.2579 - val_loss: 10.5303 - val_acc: 0.2623\n",
+      "Epoch 3/20\n",
+      "6500/6680 [============================>.] - ETA: 0s - loss: 10.0694 - acc: 0.3195Epoch 00002: val_loss improved from 10.53035 to 10.16385, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 10.0612 - acc: 0.3202 - val_loss: 10.1639 - val_acc: 0.2934\n",
+      "Epoch 4/20\n",
+      "6380/6680 [===========================>..] - ETA: 0s - loss: 9.7538 - acc: 0.3525Epoch 00003: val_loss improved from 10.16385 to 9.99237, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 9.7508 - acc: 0.3525 - val_loss: 9.9924 - val_acc: 0.2970\n",
+      "Epoch 5/20\n",
+      "6600/6680 [============================>.] - ETA: 0s - loss: 9.5045 - acc: 0.3733Epoch 00004: val_loss improved from 9.99237 to 9.85871, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 9.4967 - acc: 0.3740 - val_loss: 9.8587 - val_acc: 0.3150\n",
+      "Epoch 6/20\n",
+      "6380/6680 [===========================>..] - ETA: 0s - loss: 9.3424 - acc: 0.3934Epoch 00005: val_loss improved from 9.85871 to 9.68414, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 9.3543 - acc: 0.3928 - val_loss: 9.6841 - val_acc: 0.3293\n",
+      "Epoch 7/20\n",
+      "6440/6680 [===========================>..] - ETA: 0s - loss: 9.2648 - acc: 0.4042Epoch 00006: val_loss improved from 9.68414 to 9.63392, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 9.2379 - acc: 0.4060 - val_loss: 9.6339 - val_acc: 0.3449\n",
+      "Epoch 8/20\n",
+      "6340/6680 [===========================>..] - ETA: 0s - loss: 9.1733 - acc: 0.4170Epoch 00007: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 9.1864 - acc: 0.4163 - val_loss: 9.6382 - val_acc: 0.3461\n",
+      "Epoch 9/20\n",
+      "6160/6680 [==========================>...] - ETA: 0s - loss: 9.1413 - acc: 0.4226Epoch 00008: val_loss improved from 9.63392 to 9.61300, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 9.1710 - acc: 0.4207 - val_loss: 9.6130 - val_acc: 0.3629\n",
+      "Epoch 10/20\n",
+      "6240/6680 [===========================>..] - ETA: 0s - loss: 9.0548 - acc: 0.4256Epoch 00009: val_loss improved from 9.61300 to 9.44325, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 9.0733 - acc: 0.4244 - val_loss: 9.4433 - val_acc: 0.3605\n",
+      "Epoch 11/20\n",
+      "6640/6680 [============================>.] - ETA: 0s - loss: 8.9060 - acc: 0.4339Epoch 00010: val_loss improved from 9.44325 to 9.26773, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 8.8986 - acc: 0.4344 - val_loss: 9.2677 - val_acc: 0.3641\n",
+      "Epoch 12/20\n",
+      "6600/6680 [============================>.] - ETA: 0s - loss: 8.7253 - acc: 0.4418Epoch 00011: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 8.7295 - acc: 0.4418 - val_loss: 9.2747 - val_acc: 0.3581\n",
+      "Epoch 13/20\n",
+      "6500/6680 [============================>.] - ETA: 0s - loss: 8.6262 - acc: 0.4528Epoch 00012: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 8.6237 - acc: 0.4522 - val_loss: 9.2709 - val_acc: 0.3521\n",
+      "Epoch 14/20\n",
+      "6360/6680 [===========================>..] - ETA: 0s - loss: 8.6163 - acc: 0.4533Epoch 00013: val_loss improved from 9.26773 to 9.10361, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 8.5815 - acc: 0.4551 - val_loss: 9.1036 - val_acc: 0.3725\n",
+      "Epoch 15/20\n",
+      "6380/6680 [===========================>..] - ETA: 0s - loss: 8.2615 - acc: 0.4621Epoch 00014: val_loss improved from 9.10361 to 8.84684, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 8.2733 - acc: 0.4617 - val_loss: 8.8468 - val_acc: 0.3772\n",
+      "Epoch 16/20\n",
+      "6300/6680 [===========================>..] - ETA: 0s - loss: 8.0554 - acc: 0.4829Epoch 00015: val_loss improved from 8.84684 to 8.65147, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 8.0391 - acc: 0.4840 - val_loss: 8.6515 - val_acc: 0.3988\n",
+      "Epoch 17/20\n",
+      "6340/6680 [===========================>..] - ETA: 0s - loss: 8.0083 - acc: 0.4916Epoch 00016: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 7.9878 - acc: 0.4930 - val_loss: 8.7533 - val_acc: 0.3928\n",
+      "Epoch 18/20\n",
+      "6240/6680 [===========================>..] - ETA: 0s - loss: 7.9564 - acc: 0.4989Epoch 00017: val_loss improved from 8.65147 to 8.61974, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 7.9636 - acc: 0.4981 - val_loss: 8.6197 - val_acc: 0.4036\n",
+      "Epoch 19/20\n",
+      "6200/6680 [==========================>...] - ETA: 0s - loss: 7.8776 - acc: 0.5045Epoch 00018: val_loss improved from 8.61974 to 8.61642, saving model to saved_models/weights.best.VGG16.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 7.9477 - acc: 0.4999 - val_loss: 8.6164 - val_acc: 0.4108\n",
+      "Epoch 20/20\n",
+      "6220/6680 [==========================>...] - ETA: 0s - loss: 7.9603 - acc: 0.5018Epoch 00019: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 7.9321 - acc: 0.5034 - val_loss: 8.6873 - val_acc: 0.3976\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fe35d7f1ba8>"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "checkpointer = ModelCheckpoint(filepath='saved_models/weights.best.VGG16.hdf5', \n",
     "                               verbose=1, save_best_only=True)\n",
@@ -1006,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -1026,11 +1118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 42.4641%\n"
+     ]
+    }
+   ],
    "source": [
     "# get index of predicted dog breed for each image in test set\n",
     "VGG16_predictions = [np.argmax(VGG16_model.predict(np.expand_dims(feature, axis=0))) for feature in test_VGG16]\n",
@@ -1049,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -1106,7 +1204,11 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Obtain bottleneck features from another pre-trained CNN."
+    "### TODO: Obtain bottleneck features from another pre-trained CNN.\n",
+    "bottleneck_features = np.load('bottleneck_features/DogResnet50Data.npz')\n",
+    "train_ResNet50 = bottleneck_features['train']\n",
+    "valid_ResNet50 = bottleneck_features['valid']\n",
+    "test_ResNet50 = bottleneck_features['test']"
    ]
   },
   {
