--- a/p1-dog/dog_app.ipynb
+++ b/p1-dog/dog_app.ipynb
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
@@ -1208,7 +1208,19 @@
     "bottleneck_features = np.load('bottleneck_features/DogResnet50Data.npz')\n",
     "train_ResNet50 = bottleneck_features['train']\n",
     "valid_ResNet50 = bottleneck_features['valid']\n",
-    "test_ResNet50 = bottleneck_features['test']"
+    "test_ResNet50 = bottleneck_features['test']\n",
+    "\n",
+    "# # create and configure augmented image generator\n",
+    "# datagen_train = ImageDataGenerator(\n",
+    "#     width_shift_range=0.1,  # randomly shift images horizontally (10% of total width)\n",
+    "#     height_shift_range=0.1,  # randomly shift images vertically (10% of total height)\n",
+    "#     horizontal_flip=True) # randomly flip images horizontally\n",
+    "\n",
+    "# # create and configure augmented image generator\n",
+    "# datagen_valid = ImageDataGenerator(\n",
+    "#     width_shift_range=0.1,  # randomly shift images horizontally (10% of total width)\n",
+    "#     height_shift_range=0.1,  # randomly shift images vertically (10% of total height)\n",
+    "#     horizontal_flip=True) # randomly flip images horizontally"
    ]
   },
   {
@@ -1229,13 +1241,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "global_average_pooling2d_11  (None, 2048)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_11 (Dense)             (None, 133)               272517    \n",
+      "=================================================================\n",
+      "Total params: 272,517\n",
+      "Trainable params: 272,517\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
-    "### TODO: Define your architecture."
+    "### TODO: Define your architecture.\n",
+    "ResNet50_model = Sequential()\n",
+    "ResNet50_model.add(GlobalAveragePooling2D(input_shape=train_ResNet50.shape[1:]))\n",
+    "ResNet50_model.add(Dense(133, activation='softmax'))\n",
+    "\n",
+    "ResNet50_model.summary()"
    ]
   },
   {
@@ -1247,13 +1280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "### TODO: Compile the model."
+    "### TODO: Compile the model.\n",
+    "ResNet50_model.compile(loss='categorical_crossentropy', optimizer='rmsprop', metrics=['accuracy'])"
    ]
   },
   {
@@ -1269,13 +1303,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 6680 samples, validate on 835 samples\n",
+      "Epoch 1/20\n",
+      "6420/6680 [===========================>..] - ETA: 0s - loss: 1.6456 - acc: 0.6022Epoch 00000: val_loss improved from inf to 0.78916, saving model to saved_models/weights.best.ResNet50.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 1.6146 - acc: 0.6076 - val_loss: 0.7892 - val_acc: 0.7533\n",
+      "Epoch 2/20\n",
+      "6280/6680 [===========================>..] - ETA: 0s - loss: 0.4279 - acc: 0.8637Epoch 00001: val_loss improved from 0.78916 to 0.72461, saving model to saved_models/weights.best.ResNet50.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 0.4331 - acc: 0.8635 - val_loss: 0.7246 - val_acc: 0.7725\n",
+      "Epoch 3/20\n",
+      "6500/6680 [============================>.] - ETA: 0s - loss: 0.2618 - acc: 0.9194Epoch 00002: val_loss improved from 0.72461 to 0.71814, saving model to saved_models/weights.best.ResNet50.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 0.2636 - acc: 0.9192 - val_loss: 0.7181 - val_acc: 0.7856\n",
+      "Epoch 4/20\n",
+      "6580/6680 [============================>.] - ETA: 0s - loss: 0.1761 - acc: 0.9479Epoch 00003: val_loss improved from 0.71814 to 0.69368, saving model to saved_models/weights.best.ResNet50.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 0.1774 - acc: 0.9470 - val_loss: 0.6937 - val_acc: 0.8096\n",
+      "Epoch 5/20\n",
+      "6500/6680 [============================>.] - ETA: 0s - loss: 0.1191 - acc: 0.9622Epoch 00004: val_loss improved from 0.69368 to 0.68511, saving model to saved_models/weights.best.ResNet50.hdf5\n",
+      "6680/6680 [==============================] - 0s - loss: 0.1199 - acc: 0.9620 - val_loss: 0.6851 - val_acc: 0.8144\n",
+      "Epoch 6/20\n",
+      "6340/6680 [===========================>..] - ETA: 0s - loss: 0.0879 - acc: 0.9748Epoch 00005: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0881 - acc: 0.9749 - val_loss: 0.6981 - val_acc: 0.8168\n",
+      "Epoch 7/20\n",
+      "6600/6680 [============================>.] - ETA: 0s - loss: 0.0646 - acc: 0.9812Epoch 00006: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0650 - acc: 0.9808 - val_loss: 0.7156 - val_acc: 0.8156\n",
+      "Epoch 8/20\n",
+      "6640/6680 [============================>.] - ETA: 0s - loss: 0.0481 - acc: 0.9858Epoch 00007: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0479 - acc: 0.9859 - val_loss: 0.7468 - val_acc: 0.8204\n",
+      "Epoch 9/20\n",
+      "6500/6680 [============================>.] - ETA: 0s - loss: 0.0339 - acc: 0.9906Epoch 00008: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0345 - acc: 0.9906 - val_loss: 0.7630 - val_acc: 0.8180\n",
+      "Epoch 10/20\n",
+      "6620/6680 [============================>.] - ETA: 0s - loss: 0.0270 - acc: 0.9926Epoch 00009: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0279 - acc: 0.9925 - val_loss: 0.7199 - val_acc: 0.8299\n",
+      "Epoch 11/20\n",
+      "6460/6680 [============================>.] - ETA: 0s - loss: 0.0203 - acc: 0.9950Epoch 00010: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0199 - acc: 0.9952 - val_loss: 0.7886 - val_acc: 0.8240\n",
+      "Epoch 12/20\n",
+      "6400/6680 [===========================>..] - ETA: 0s - loss: 0.0146 - acc: 0.9970Epoch 00011: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0149 - acc: 0.9969 - val_loss: 0.7945 - val_acc: 0.8216\n",
+      "Epoch 13/20\n",
+      "6140/6680 [==========================>...] - ETA: 0s - loss: 0.0141 - acc: 0.9956Epoch 00012: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0150 - acc: 0.9955 - val_loss: 0.8351 - val_acc: 0.8120\n",
+      "Epoch 14/20\n",
+      "6060/6680 [==========================>...] - ETA: 0s - loss: 0.0105 - acc: 0.9972Epoch 00013: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0112 - acc: 0.9973 - val_loss: 0.8896 - val_acc: 0.8192\n",
+      "Epoch 15/20\n",
+      "6660/6680 [============================>.] - ETA: 0s - loss: 0.0100 - acc: 0.9979Epoch 00014: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0100 - acc: 0.9979 - val_loss: 0.8086 - val_acc: 0.8240\n",
+      "Epoch 16/20\n",
+      "6180/6680 [==========================>...] - ETA: 0s - loss: 0.0090 - acc: 0.9971Epoch 00015: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0089 - acc: 0.9970 - val_loss: 0.8258 - val_acc: 0.8084\n",
+      "Epoch 17/20\n",
+      "6400/6680 [===========================>..] - ETA: 0s - loss: 0.0075 - acc: 0.9981Epoch 00016: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0075 - acc: 0.9981 - val_loss: 0.9139 - val_acc: 0.8168\n",
+      "Epoch 18/20\n",
+      "6040/6680 [==========================>...] - ETA: 0s - loss: 0.0059 - acc: 0.9985Epoch 00017: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0057 - acc: 0.9985 - val_loss: 0.9146 - val_acc: 0.8263\n",
+      "Epoch 19/20\n",
+      "6560/6680 [============================>.] - ETA: 0s - loss: 0.0061 - acc: 0.9986Epoch 00018: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0060 - acc: 0.9987 - val_loss: 0.9172 - val_acc: 0.8216\n",
+      "Epoch 20/20\n",
+      "6420/6680 [===========================>..] - ETA: 0s - loss: 0.0062 - acc: 0.9983Epoch 00019: val_loss did not improve\n",
+      "6680/6680 [==============================] - 0s - loss: 0.0060 - acc: 0.9984 - val_loss: 0.8973 - val_acc: 0.8240\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fe364c61c88>"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### TODO: Train the model."
+    "### TODO: Train the model.\n",
+    "checkpointer = ModelCheckpoint(filepath='saved_models/weights.best.ResNet50.hdf5', \n",
+    "                               verbose=1, save_best_only=True)\n",
+    "\n",
+    "ResNet50_model.fit(train_ResNet50, train_targets, \n",
+    "          validation_data=(valid_ResNet50, valid_targets),\n",
+    "          epochs=20, batch_size=20, callbacks=[checkpointer], verbose=1)\n",
+    "\n",
+    "# ResNet50_model.fit_generator(datagen_train.flow(train_ResNet50, train_targets, batch_size=batch_size),\n",
+    "#                     steps_per_epoch=50 // batch_size,\n",
+    "#                     epochs=epochs, verbose=1, callbacks=[checkpointer],\n",
+    "#                     validation_data=datagen_valid.flow(valid_ResNet50, valid_targets, batch_size=batch_size),\n",
+    "#                     validation_steps=valid_ResNet50.shape[0] // batch_size)"
    ]
   },
   {
@@ -1287,13 +1409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "### TODO: Load the model weights with the best validation loss."
+    "### TODO: Load the model weights with the best validation loss.\n",
+    "ResNet50_model.load_weights('saved_models/weights.best.ResNet50.hdf5')"
    ]
   },
   {
@@ -1307,13 +1430,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 80.9809%\n"
+     ]
+    }
+   ],
    "source": [
-    "### TODO: Calculate classification accuracy on the test dataset."
+    "### TODO: Calculate classification accuracy on the test dataset.\n",
+    "# get index of predicted dog breed for each image in test set\n",
+    "ResNet50_predictions = [np.argmax(ResNet50_model.predict(np.expand_dims(feature, axis=0))) for feature in test_ResNet50]\n",
+    "\n",
+    "# report test accuracy\n",
+    "test_accuracy = 100*np.sum(np.array(ResNet50_predictions)==np.argmax(test_targets, axis=1))/len(ResNet50_predictions)\n",
+    "print('Test accuracy: %.4f%%' % test_accuracy)"
    ]
   },
   {
