--- a/Old Material/p1-dog/dog_app.ipynb
+++ b/Old Material/p1-dog/dog_app.ipynb
@@ -745,13 +745,7 @@
       "Epoch 25/40\n",
       "6660/6680 [============================>.] - ETA: 0s - loss: 4.3145 - acc: 0.0685Epoch 00024: val_loss improved from 4.48276 to 4.44181, saving model to saved_models/weights.best.from_scratch.hdf5\n",
       "6680/6680 [==============================] - 10s - loss: 4.3149 - acc: 0.0683 - val_loss: 4.4418 - val_acc: 0.0587\n",
-      "Epoch 26/40\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 26/40\n",
       "6660/6680 [============================>.] - ETA: 0s - loss: 4.2886 - acc: 0.0685Epoch 00025: val_loss improved from 4.44181 to 4.44053, saving model to saved_models/weights.best.from_scratch.hdf5\n",
       "6680/6680 [==============================] - 10s - loss: 4.2887 - acc: 0.0686 - val_loss: 4.4405 - val_acc: 0.0563\n",
       "Epoch 27/40\n",
@@ -951,7 +945,9 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "VGG16_model.compile(loss='categorical_crossentropy', optimizer='rmsprop', metrics=['accuracy'])"
@@ -1543,13 +1539,7 @@
       "Epoch 81/150\n",
       "6528/6680 [============================>.] - ETA: 0s - loss: 0.4942 - acc: 0.8415Epoch 00080: val_loss did not improve\n",
       "6680/6680 [==============================] - 0s - loss: 0.4971 - acc: 0.8409 - val_loss: 0.4951 - val_acc: 0.8455\n",
-      "Epoch 82/150\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 82/150\n",
       "6656/6680 [============================>.] - ETA: 0s - loss: 0.4753 - acc: 0.8438Epoch 00081: val_loss did not improve\n",
       "6680/6680 [==============================] - 0s - loss: 0.4751 - acc: 0.8440 - val_loss: 0.4882 - val_acc: 0.8527\n",
       "Epoch 83/150\n",
@@ -1742,13 +1732,7 @@
       "6272/6680 [===========================>..] - ETA: 0s - loss: 0.3068 - acc: 0.9007Epoch 00142: val_loss did not improve\n",
       "6680/6680 [==============================] - 0s - loss: 0.3103 - acc: 0.8994 - val_loss: 0.4622 - val_acc: 0.8431\n",
       "Epoch 144/150\n",
-      "6528/6680 [============================>.] - ETA: 0s - loss: 0.3035 - acc: 0.9013Epoch 00143: val_loss did not improve\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "6528/6680 [============================>.] - ETA: 0s - loss: 0.3035 - acc: 0.9013Epoch 00143: val_loss did not improve\n",
       "6680/6680 [==============================] - 0s - loss: 0.3039 - acc: 0.9012 - val_loss: 0.4608 - val_acc: 0.8407\n",
       "Epoch 145/150\n",
       "6400/6680 [===========================>..] - ETA: 0s - loss: 0.3081 - acc: 0.8980Epoch 00144: val_loss did not improve\n",
@@ -1910,7 +1894,9 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### TODO: Write your algorithm.\n",
@@ -2168,7 +2154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
