answering more questions

--- a/minip2-nlpbookworm/bookworm.ipynb
+++ b/minip2-nlpbookworm/bookworm.ipynb
@@ -3455,6 +3455,12 @@
     "(_Hint: Look for `\"relations\"`._)\n",
     "\n",
     "**A**: \n",
+    "* Sentence: \"Pursued by the Empire's sinister agents, Princess Leia races home aboard her starship, custodian of the stolen plans that can save her people and restore freedom to the galaxy...\"\n",
+    "* Subject: \"freedom\"\n",
+    "* Action: \"restore\"\n",
+    "* Object: \"to the galaxy\"\n",
+    "\n",
+    "I would've marked as the subject the Princess Leia.\n",
     "\n",
     "#### Keywords\n",
     "\n",
