nlp project continues

--- a/lab1-sentimentanalysis/sentiment_analysis.ipynb
+++ b/lab1-sentimentanalysis/sentiment_analysis.ipynb
@@ -1023,7 +1023,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.preprocessing import sequence\n",
@@ -1108,7 +1110,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Compile your model, specifying a loss function, optimizer, and metrics\n",
