--- a/p2-machinetranslation/machine_translation.ipynb
+++ b/p2-machinetranslation/machine_translation.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -214,9 +214,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequence 1 in x\n",
+      "  Input:  [1 2 4 5 6 7 1 8 9]\n",
+      "  Output: [1 2 4 5 6 7 1 8 9 0]\n",
+      "Sequence 2 in x\n",
+      "  Input:  [10 11 12  2 13 14 15 16  3 17]\n",
+      "  Output: [10 11 12  2 13 14 15 16  3 17]\n",
+      "Sequence 3 in x\n",
+      "  Input:  [18 19  3 20 21]\n",
+      "  Output: [18 19  3 20 21  0  0  0  0  0]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
@@ -230,7 +246,8 @@
     "    :return: Padded numpy array of sequences\n",
     "    \"\"\"\n",
     "    # TODO: Implement\n",
-    "    return None\n",
+    "    return pad_sequences(x,maxlen=length,padding='post')\n",
+    "\n",
     "tests.test_pad(pad)\n",
     "\n",
     "# Pad Tokenized output\n",
@@ -251,9 +268,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Preprocessed\n"
+     ]
+    }
+   ],
    "source": [
     "def preprocess(x, y):\n",
     "    \"\"\"\n",
@@ -293,16 +318,22 @@
     "\n",
     "After experimenting with the four simple architectures, you will construct a deeper architecture that is designed to outperform all four models.\n",
     "### Ids Back to Text\n",
-    "The neural network will be translating the input to words ids, which isn't the final form we want.  We want the French translation.  The function `logits_to_text` will bridge the gab between the logits from the neural network to the French translation.  You'll be using this function to better understand the output of the neural network."
+    "The neural network will be translating the input to words ids, which isn't the final form we want.  We want the French translation.  The function `logits_to_text` will bridge the gap between the logits from the neural network to the French translation.  You'll be using this function to better understand the output of the neural network."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "`logits_to_text` function loaded.\n"
+     ]
+    }
+   ],
    "source": [
     "def logits_to_text(logits, tokenizer):\n",
     "    \"\"\"\n",
@@ -330,13 +361,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 110288 samples, validate on 27573 samples\n",
+      "Epoch 1/20\n",
+      "110288/110288 [==============================] - 8s - loss: 1.7881 - acc: 0.5617 - val_loss: nan - val_acc: 0.6300\n",
+      "Epoch 2/20\n",
+      "110288/110288 [==============================] - 8s - loss: 1.2160 - acc: 0.6393 - val_loss: nan - val_acc: 0.6733\n",
+      "Epoch 3/20\n",
+      "110288/110288 [==============================] - 8s - loss: 1.0906 - acc: 0.6592 - val_loss: nan - val_acc: 0.6835\n",
+      "Epoch 4/20\n",
+      "110288/110288 [==============================] - 8s - loss: 1.0233 - acc: 0.6697 - val_loss: nan - val_acc: 0.7069\n",
+      "Epoch 5/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.9740 - acc: 0.6793 - val_loss: nan - val_acc: 0.7141\n",
+      "Epoch 6/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.9341 - acc: 0.6886 - val_loss: nan - val_acc: 0.7247\n",
+      "Epoch 7/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.8986 - acc: 0.6982 - val_loss: nan - val_acc: 0.7290\n",
+      "Epoch 8/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.8654 - acc: 0.7084 - val_loss: nan - val_acc: 0.7418\n",
+      "Epoch 9/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.8299 - acc: 0.7202 - val_loss: nan - val_acc: 0.7590\n",
+      "Epoch 10/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.7950 - acc: 0.7317 - val_loss: nan - val_acc: 0.7682\n",
+      "Epoch 11/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.7646 - acc: 0.7416 - val_loss: nan - val_acc: 0.7803\n",
+      "Epoch 12/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.7432 - acc: 0.7483 - val_loss: nan - val_acc: 0.7875\n",
+      "Epoch 13/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.7226 - acc: 0.7546 - val_loss: nan - val_acc: 0.7920\n",
+      "Epoch 14/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.7049 - acc: 0.7604 - val_loss: nan - val_acc: 0.7949\n",
+      "Epoch 15/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.6915 - acc: 0.7643 - val_loss: nan - val_acc: 0.7961\n",
+      "Epoch 16/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.6767 - acc: 0.7694 - val_loss: nan - val_acc: 0.8049\n",
+      "Epoch 17/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.6657 - acc: 0.7733 - val_loss: nan - val_acc: 0.8103\n",
+      "Epoch 18/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.6537 - acc: 0.7773 - val_loss: nan - val_acc: 0.8121\n",
+      "Epoch 19/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.6425 - acc: 0.7816 - val_loss: nan - val_acc: 0.8175\n",
+      "Epoch 20/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.6310 - acc: 0.7853 - val_loss: nan - val_acc: 0.8215\n",
+      "new jersey est parfois parfois en mois de il est neigeux est neigeux en <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.layers import GRU, Input, Dense, TimeDistributed\n",
-    "from keras.models import Model\n",
-    "from keras.layers import Activation\n",
+    "from keras.models import Model,Sequential\n",
+    "from keras.layers import Activation,Dropout\n",
     "from keras.optimizers import Adam\n",
     "from keras.losses import sparse_categorical_crossentropy\n",
     "\n",
@@ -351,7 +431,14 @@
     "    :return: Keras model built, but not trained\n",
     "    \"\"\"\n",
     "    # TODO: Build the layers\n",
-    "    model = None\n",
+    "    learning_rate = 0.001\n",
+    "    x_t = Input(shape=input_shape)\n",
+    "    model = Sequential()\n",
+    "    model.add(GRU(128,input_shape = input_shape[1:],return_sequences=True))\n",
+    "    model.add(Dropout(0.2))\n",
+    "    model.add(TimeDistributed(Dense(1024,activation=\"relu\")))    \n",
+    "    model.add(Dropout(0.2))\n",
+    "    model.add(TimeDistributed(Dense(french_vocab_size,activation=\"softmax\")))    \n",
     "    model.compile(loss=sparse_categorical_crossentropy,\n",
     "                  optimizer=Adam(learning_rate),\n",
     "                  metrics=['accuracy'])\n",
@@ -369,7 +456,7 @@
     "    preproc_french_sentences.shape[1],\n",
     "    len(english_tokenizer.word_index),\n",
     "    len(french_tokenizer.word_index))\n",
-    "simple_rnn_model.fit(tmp_x, preproc_french_sentences, batch_size=1024, epochs=10, validation_split=0.2)\n",
+    "simple_rnn_model.fit(tmp_x, preproc_french_sentences, batch_size=256, epochs=20, validation_split=0.2)\n",
     "\n",
     "# Print prediction(s)\n",
     "print(logits_to_text(simple_rnn_model.predict(tmp_x[:1])[0], french_tokenizer))"
@@ -388,13 +475,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_86 (Embedding)     (None, 21, 128)           25472     \n",
+      "_________________________________________________________________\n",
+      "lstm_76 (LSTM)               (None, 21, 128)           131584    \n",
+      "_________________________________________________________________\n",
+      "time_distributed_92 (TimeDis (None, 21, 344)           44376     \n",
+      "=================================================================\n",
+      "Total params: 201,432\n",
+      "Trainable params: 201,432\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Train on 110288 samples, validate on 27573 samples\n",
+      "Epoch 1/20\n",
+      "110288/110288 [==============================] - 10s - loss: 2.2811 - acc: 0.5257 - val_loss: nan - val_acc: 0.6692\n",
+      "Epoch 2/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.9411 - acc: 0.7555 - val_loss: nan - val_acc: 0.8115\n",
+      "Epoch 3/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.5759 - acc: 0.8302 - val_loss: nan - val_acc: 0.8567\n",
+      "Epoch 4/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.4520 - acc: 0.8615 - val_loss: nan - val_acc: 0.8791\n",
+      "Epoch 5/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.3870 - acc: 0.8792 - val_loss: nan - val_acc: 0.8938\n",
+      "Epoch 6/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.3445 - acc: 0.8914 - val_loss: nan - val_acc: 0.9023\n",
+      "Epoch 7/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.3145 - acc: 0.8997 - val_loss: nan - val_acc: 0.9078\n",
+      "Epoch 8/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.2939 - acc: 0.9056 - val_loss: nan - val_acc: 0.9131\n",
+      "Epoch 9/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.2769 - acc: 0.9102 - val_loss: nan - val_acc: 0.9174\n",
+      "Epoch 10/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.2632 - acc: 0.9142 - val_loss: nan - val_acc: 0.9186\n",
+      "Epoch 11/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.2524 - acc: 0.9169 - val_loss: nan - val_acc: 0.9233\n",
+      "Epoch 12/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.2434 - acc: 0.9193 - val_loss: nan - val_acc: 0.9249\n",
+      "Epoch 13/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.2364 - acc: 0.9214 - val_loss: nan - val_acc: 0.9254\n",
+      "Epoch 14/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.2297 - acc: 0.9230 - val_loss: nan - val_acc: 0.9271\n",
+      "Epoch 15/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.2247 - acc: 0.9245 - val_loss: nan - val_acc: 0.9281\n",
+      "Epoch 16/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.2209 - acc: 0.9253 - val_loss: nan - val_acc: 0.9293\n",
+      "Epoch 17/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.2154 - acc: 0.9268 - val_loss: nan - val_acc: 0.9307\n",
+      "Epoch 18/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.2114 - acc: 0.9280 - val_loss: nan - val_acc: 0.9292\n",
+      "Epoch 19/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.2089 - acc: 0.9285 - val_loss: nan - val_acc: 0.9322\n",
+      "Epoch 20/20\n",
+      "110288/110288 [==============================] - 8s - loss: 0.2055 - acc: 0.9295 - val_loss: nan - val_acc: 0.9326\n",
+      "new jersey est parfois calme en l' automne et il est neigeux en avril <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.layers.embeddings import Embedding\n",
+    "from keras.layers import Embedding, LSTM, Dense, Dropout\n",
     "\n",
     "\n",
     "def embed_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
@@ -407,15 +555,36 @@
     "    :return: Keras model built, but not trained\n",
     "    \"\"\"\n",
     "    # TODO: Implement\n",
-    "    return None\n",
+    "    model = Sequential()\n",
+    "    learning_rate = 0.001\n",
+    "    model.add(Embedding(input_dim = english_vocab_size, output_dim = 128,input_length=input_shape[1]))\n",
+    "    model.add(LSTM(128, dropout=0.2,return_sequences=True))\n",
+    "    model.add(TimeDistributed(Dense(french_vocab_size, activation='softmax')))\n",
+    "    model.compile(loss=sparse_categorical_crossentropy,\n",
+    "                  optimizer=Adam(learning_rate),\n",
+    "                  metrics=['accuracy'])\n",
+    "\n",
+    "    return model\n",
+    "\n",
     "tests.test_embed_model(embed_model)\n",
     "\n",
     "\n",
     "# TODO: Reshape the input\n",
-    "\n",
+    "tmp_x = pad(preproc_english_sentences, preproc_french_sentences.shape[1])\n",
+    "# print(tmp_x.shape)\n",
+    "# tmp_x = tmp_x.reshape((-1, preproc_french_sentences.shape[-2], 1))\n",
+    "# print(tmp_x.shape)\n",
     "# TODO: Train the neural network\n",
+    "embedd_rnn_model = embed_model(\n",
+    "    tmp_x.shape,\n",
+    "    preproc_french_sentences.shape[1],\n",
+    "    len(english_tokenizer.word_index),\n",
+    "    len(french_tokenizer.word_index))\n",
+    "embedd_rnn_model.summary()\n",
+    "embedd_rnn_model.fit(tmp_x, preproc_french_sentences, batch_size=256, epochs=20, validation_split=0.2)\n",
     "\n",
-    "# TODO: Print prediction(s)"
+    "# TODO: Print prediction(s)\n",
+    "print(logits_to_text(embedd_rnn_model.predict(tmp_x[:1])[0], french_tokenizer))"
    ]
   },
   {
@@ -504,7 +673,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def model_final(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
