--- a/p3-speechrecognizer/vui_notebook.ipynb
+++ b/p3-speechrecognizer/vui_notebook.ipynb
@@ -299,17 +299,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#####################################################################\n",
     "# RUN THIS CODE CELL IF YOU ARE RESUMING THE NOTEBOOK AFTER A BREAK #\n",
@@ -1097,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1111,21 +1103,21 @@
       "_________________________________________________________________\n",
       "conv1d (Conv1D)              (None, None, 200)         354400    \n",
       "_________________________________________________________________\n",
-      "max_pooling1d_21 (MaxPooling (None, None, 200)         0         \n",
+      "max_pooling1d_2 (MaxPooling1 (None, None, 200)         0         \n",
       "_________________________________________________________________\n",
-      "dropout_9 (Dropout)          (None, None, 200)         0         \n",
+      "dropout_2 (Dropout)          (None, None, 200)         0         \n",
       "_________________________________________________________________\n",
       "bn_rnn0 (BatchNormalization) (None, None, 200)         800       \n",
       "_________________________________________________________________\n",
-      "bidirectional_47 (Bidirectio (None, None, 400)         481200    \n",
+      "bidirectional_3 (Bidirection (None, None, 400)         481200    \n",
       "_________________________________________________________________\n",
       "bn_rnn1 (BatchNormalization) (None, None, 400)         1600      \n",
       "_________________________________________________________________\n",
-      "bidirectional_48 (Bidirectio (None, None, 400)         721200    \n",
+      "bidirectional_4 (Bidirection (None, None, 400)         721200    \n",
       "_________________________________________________________________\n",
       "bn_rnn2 (BatchNormalization) (None, None, 400)         1600      \n",
       "_________________________________________________________________\n",
-      "time_distributed_25 (TimeDis (None, None, 29)          11629     \n",
+      "time_distributed_2 (TimeDist (None, None, 29)          11629     \n",
       "_________________________________________________________________\n",
       "softmax (Activation)         (None, None, 29)          0         \n",
       "=================================================================\n",
@@ -1333,13 +1325,7 @@
       "106/106 [==============================] - 172s - loss: 97.3758 - val_loss: 96.5815\n",
       "Epoch 83/100\n",
       "106/106 [==============================] - 173s - loss: 97.1388 - val_loss: 96.5729\n",
-      "Epoch 84/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 84/100\n",
       "106/106 [==============================] - 172s - loss: 96.7031 - val_loss: 97.6106\n",
       "Epoch 85/100\n",
       "106/106 [==============================] - 170s - loss: 96.2755 - val_loss: 95.1575\n",
@@ -1391,7 +1377,7 @@
     "\n",
     "__Answer:__\n",
     "\n",
-    "In the final model I decided to utilize most of the previous techinques of the first 4 example models. My final model has a CNN, uses a deep (2 layers) RNN in which both RNNs are bidirectional. A Time distributed layer for the dense fully connected layer was also added. The reason to use a CNN and a deep RNN was because I noticed a significant improvement compared to the simpler models. The combination of a CNN and a deep RNN will obviously lead to a more complex model that will take more time to train but I decided to pursue this out of curiocity. At first my model quickly overfitted (in less than 20 epochs) and of course I decided to employ drop out. First I added 0.5 (inputs+ouptputs) dropout on the bidirectional RNNs and that seemed to work for a while but I felt that more training could help the model. However, even after adding dropout to the RNNs the model still overfitted but considering its complexity I could push it further. So, I've decided to add dropout to the exits of the max pooling layer (After the CNN). After that I noticed very consistent results. Training the model for 100 epochs ( more than 1 hour in a 1080ti GPU) finally validation loss that's less than 100 (95) without significantly overfitting."
+    "In the final model I decided to utilize most of the previous techinques of the first 4 example models. My final model has a CNN, uses a deep (2 layers) RNN in which both RNNs are bidirectional. A Time distributed layer for the dense fully connected layer was also added. The reason to use a CNN and a deep RNN was because I noticed a significant improvement compared to the simpler models. The combination of a CNN and a deep RNN will obviously lead to a more complex model that will take more time to train but I decided to pursue this out of curiosity. At first my model quickly overfitted (in less than 20 epochs) and of course I decided to employ drop out. First I added 0.5 (inputs+ouptputs) dropout on the bidirectional RNNs and that seemed to work for a while but I felt that more training could help the model. However, even after adding dropout to the RNNs the model still overfitted but considering its complexity I could push it further. So, I've decided to add dropout to the exits of the max pooling layer (After the CNN). After that I noticed very consistent results. Training the model for 100 epochs finally got me validation loss that's less than 100 (95) without significantly overfitting."
    ]
   },
   {
@@ -1406,9 +1392,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from data_generator import AudioGenerator\n",
@@ -1467,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1499,12 +1493,14 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from IPython.display import Audio\n",
+    "\n",
     "Audio(get_predictions(index=0, \n",
     "                partition='train',\n",
     "                input_to_softmax=model_end, \n",
@@ -1520,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1548,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
